--- a/IB-projekat.csproj
+++ b/IB-projekat.csproj
@@ -23,13 +23,14 @@
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.3" />
+    <PackageReference Include="SendGrid" Version="9.28.1" />
     <PackageReference Include="System.Security.Cryptography.ProtectedData" Version="7.0.1" />
     <PackageReference Include="System.Security.Cryptography.X509Certificates" Version="4.3.2" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="certs\" />
-    <Folder Include="keys\" />
+    <Folder Include="Certificates\Controller\" />
+    <Folder Include="Certificates\Service\" />
   </ItemGroup>
 
 </Project>
