--- a/IB-projekat.csproj
+++ b/IB-projekat.csproj
@@ -26,6 +26,7 @@
     <PackageReference Include="SendGrid" Version="9.28.1" />
     <PackageReference Include="System.Security.Cryptography.ProtectedData" Version="7.0.1" />
     <PackageReference Include="System.Security.Cryptography.X509Certificates" Version="4.3.2" />
+    <PackageReference Include="Twilio" Version="6.6.0" />
   </ItemGroup>
 
   <ItemGroup>
